# redis-limpyd-jobs

./: .travis.yml  CHANGELOG  CHANGELOG.rst  README.md  README.rst  documentup.json  example.py  requirements.txt  run_tests.py  setup.cfg  setup.py
limpyd_jobs/: __init__.py  models.py  utils.py  version.py  workers.py
limpyd_jobs/scripts/: worker.py
scripts/: limpyd-worker.py
tests/: base.py  models.py  workers.py
