[metadata]
name = redis-limpyd-jobs
version = 1.1.dev0
author = Stephane "Twidi" Angel
author_email = s.angel@twidi.com
url = https://github.com/limpyd/redis-limpyd-jobs
description = A queue/jobs system based on redis-limpyd, a redis orm (sort of) in python
long_description = file: README.rst
license = WTFPL
license_file = LICENSE
keywords = redis, orm, jobs, queue
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = True
packages = find:
install_requires =
    redis>=2.10,<2.11
    redis-limpyd>=1.3
    redis-limpyd-extensions>=1.1
    future
    setproctitle
    python-dateutil
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.packages.find]
include =
    limpyd_jobs
    limpyd_jobs.*

[options.entry_points]
console_scripts =
    limpyd-jobs-worker = limpyd_jobs.scripts.worker:main

[bdist_wheel]
universal = 1

[nosetests]
tests=tests.base,tests.models,tests.workers
with-coverage=
cover-package=limpyd_jobs
cover-erase=
cover-inclusive=
